--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
 	<style>
 	body {
+  background: #EEEEEE;
   font: 12px "Times New Roman", Times, sans-serif;
   line-height: 1.4;
   margin: 40px 0;
